--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hiymalia</title>
+    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">   
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -158,6 +159,8 @@
             <p>&copy; 2023 Your Website. All rights reserved.</p>
         </div>
     </footer>
-    <script src="../bootstrap-5.3.1-dist (1)/bootstrap-5.3.1-dist/js/bootstrap.js"></script>
+    <script src="/bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
+    <!-- <script src="bootstrap.min.js"></script> -->
+    <!-- <script src="../bootstrap-5.3.1-dist (1)/bootstrap-5.3.1-dist/js/bootstrap.js"></script> -->
 </body>
 </html>
