--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>hiymalia</title>
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">   
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
         <nav id="navbar" class="navbar navbar-expand-lg ">
@@ -159,7 +160,8 @@
                 <p>&copy; 2023 Your Website. All rights reserved.</p>
             </div>
         </footer>
-        <script src="/bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
-        <script src="/js.js"></script>
-</body>
+        <script src="/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+        <script src="bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+        <script src="/file.js"></script>
+    </body>
 </html>
